--- a/dokumentacja - latex/tex/interfejs.tex
+++ b/dokumentacja - latex/tex/interfejs.tex
@@ -1,4 +1,5 @@
 \chapter{Interfejs graficzny - strona internetowa}
+Widok serwisu dla nie zalogowanego użytkowika można zobaczyć na rysunku \ref*{fig:strona_glowna} na stronie \pageref{fig:strona_glowna}
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=17cm, height=10cm] {fig/interfejs}
@@ -202,6 +203,14 @@ if(isset($gkat) && is_numeric($gkat)) {
 </form>
 \end{lstlisting}
 \end{itemize}
+Menu serwisu dla niezalogowanego użytkownika przedstawia screen \ref{fig:nie_zalogowany} na stronie \pageref{fig:nie_zalogowany}. Dostepne jest 
+\begin{itemize}
+	\item Przejście do strony głównej
+	\item Przeglądanie kategorii oraz produktów 
+	\item Rejestracja
+	\item Logowanie
+\end{itemize}
+
 
 \begin{figure}[H]
 	\centering
@@ -209,7 +218,7 @@ if(isset($gkat) && is_numeric($gkat)) {
 	\caption{Widok menu dla niezalogowanego użytkownika}
 	\label{fig:nie_zalogowany}
 \end{figure}
-
+Po kliknięciu na kategorii która zawiera podkategorie następuje rozwinięcie menu. Efekt widoczny na screenie \ref{fig:menu_rozwijalne} na stronie \pageref{fig:menu_rozwijalne}
 \begin{figure}[H]
 	\centering
 	\includegraphics {fig/menu_rozwijanie}
